Fixed z-index

--- a/client/css/lightbox.css
+++ b/client/css/lightbox.css
@@ -6,6 +6,7 @@ div.ml_box {
     left: 0;
     background: rgba(75, 75, 75, 0.95);
     text-align: center;
+    z-index: 9999;
 }
 
 div.ml_box img {
